--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     </head>
 
     <body>
+        <figure>
+            <img src="Bilder/dancingkid.gif" alt="Dancing Kid">
+        </figure>
+        <figure>
+            <img src="Bilder/Pornhub_Free.jpg" alt="Porn Hub brorsan!!!">
+        </figure>
         <div>
 
         </div>
