--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 
-<html lang="sv">
+<html lang="eng">
+
     <head>
+        <meta charset="UTF-8">
         <title>TMT ENG-WEB</title>
         <link rel="stylesheet" href="TMT-ENG-WEB-CSS.css">
     </head>
 
     <body>
+        <img id = "Backgrundsbild" src="Bilder/Backgrundsbild.jpg" alt="Old Assyrian/Syrian City">
+        
         <div>
 
         </div>
