--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
     <body>
         <div id="meny">
+            <div id="culture">
+
+            </div>
+
+            <div>
+
+            </div>
 
         </div>
 
