--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
     <body>
         <div id="meny">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#"> Culture </a></li>
+                <li><a href="#">Traditions</a></li>
+                <li><a href="#"> Sights </a></li>
+            </ul>
             <div id="Icon1">
                 <img id="bildicon1" src="Bilder/nedladdning.png" alt="ingen bild">
-            </div>
-
-            <div>
-
             </div>
 
         </div>
