--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
     <body>
         <div id="meny">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" id=border>Home</a></li>
                 <li><a href="#"> Culture </a></li>
                 <li><a href="#">Traditions</a></li>
                 <li><a href="#"> Sights </a></li>
-            </ul>
-            <div id="Icon1">
+                <div id="Icon1">
                 <img id="bildicon1" src="Bilder/nedladdning.png" alt="ingen bild">
-            </div>
-
+                </div>
+                <div id="Icon2">
+                    <img id="bildicon2" src="Bilder/circle-cropped.png" alt="ingen bild">
+                </div>
+            </ul>
         </div>
 
         <h1 id="intro">
             Intro
         </h1>
+        
+        <div id="IntroPage">
+
+        </div>
+
+        
 
     </body>
 </html>
