--- a/Culture.html
+++ b/Culture.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
         <title>TMT ENG-WEB</title>
         <link rel="stylesheet" href="TMT-ENG-WEB-CSS.css">
+        <link rel="stylesheet" href="CultureCSS.css">
     </head>
 
     <body id="CultureBody">
