--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>TMT ENG-WEB</title>
+        <title>Assyrians & Syriacs</title>
         <link rel="stylesheet" href="TMT-ENG-WEB-CSS.css">
     </head>
 
