--- a/Culture.html
+++ b/Culture.html
@@ -28,8 +28,8 @@
 
         </div>
         <div class="bild-text">
-            <h1 id="intro">
-                culture
+            <h1 class="intro">
+                Culture
             </h1>
         </div>
         <div id="effect">
