--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
        
         <div class="bild-text">
-            <h1 id="intro">
+            <h1 class="intro">
                 Intro
             </h1>
         </div>
