hv.khv.k v.jmk vjmk.c vjk.

--- a/Culture.html
+++ b/Culture.html
@@ -32,8 +32,13 @@
                 Culture
             </h1>
         </div>
-        <div id="effect">
-            
+        <div id="effect2">
+            <h2 class="heading">
+                Culture
+            </h2>
+            <p class="paragraf">
+                efhuoh-fgäowerhfäoaweäofaseöäogföaöfifgweifgulwevfulwevfuvwulev
+            </p>
         </div>
     </body>
 </html>
