--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
        
         <div class="bild-text"></div>
-            <h1 id="intro">
+            <h1 class="intro">
                 Intro
             </h1>
         </div>
