--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
                     </div>
                 </ul>
             </div>
-
-       
-        <div class="bild-text"></div>
+            
+        <div class="img-text">
             <h1 id="intro">
                 Intro
             </h1>
