--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
                 </ul>
             </div>
             
-        <div class="img-text">
-            <h1 class="intro">
+            <h1 id="intro">
                 Intro
             </h1>
-        </div>
+        
         <div id="effect">
             <h2 class="heading"> History </h2>
             <p class="paragraf">
