--- a/Culture.html
+++ b/Culture.html
@@ -28,7 +28,7 @@
 
         </div>
         <div class="bild-text">
-            <h1 class="intro">
+            <h1 id="culture">
                 Culture
             </h1>
         </div>
@@ -37,7 +37,7 @@
                 Culture
             </h2>
             <p class="paragraf">
-                efhuoh-fgäowerhfäoaweäofaseöäogföaöfifgweifgulwevfulwevfuvwulev
+                
             </p>
         </div>
     </body>
