--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
         <div id="effect">
             <h2 class="heading"> History </h2>
+            <div class="text">
             <p class="paragraf">
                 History of the Assyrian Empire:
                 The Assyrian empire was located in Mesopotamia during 2000-613 B.C.E reaching from Iran all the way to Turkey, Armenia and Egypt. It is known to be one of the first empires to ever exist. Inside of the empire Assyrians, Arameans(Syricas), Armenians and even Greeks lived together.
@@ -43,6 +44,7 @@
                 The downfall of the big Assyrian empire was about 1114-1076 B.C. When the Arameans rebelled against the empire and took control of the upper part of Mesopotamia.
                 However in 883-859 B.C. The Assyrians re-created the big empire by recovering the lost parts of its borders. They established a great king named Nimrod. The king and his son Shalmaneser conquered big parts of the Middle eastern. The worst downfall for the empire was when king Nimrod fell to an assault from Babylons in 613. 616 the city of Ashur and Nineveh the two main cities of the empire fell. This led to the fall of the Assyrian empire in.
             </p>
+            </div>
 
         </div>
         
