--- a/Culture.html
+++ b/Culture.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html" id=border>Home</a></li>
                 <li><a href="Culture.html"> Culture </a></li>
                 <li><a href="#">Traditions</a></li>
-                <li><a href="#"> Sights </a></li>
+                <li><a href="Sights.html"> Sights </a></li>
                 <div class="Icon">
                     <img id="bildicon1" src="Bilder/nedladdning.png" alt="ingen bild">
                 </div>
@@ -34,7 +34,7 @@
         </div>
         <div id="effect2">
             <h2 class="heading">
-                Culture
+                <u>Culture</u>
             </h2>
             <p class="paragraf">
                 
