--- a/Culture.html
+++ b/Culture.html
@@ -17,7 +17,7 @@
                 </div>
                 <li><a href="index.html" id=border>Home</a></li>
                 <li><a href="Culture.html"> Culture </a></li>
-                <li><a href="#">Traditions</a></li>
+                <li><a href="Traditions.html">Traditions</a></li>
                 <li><a href="Sights.html"> Sights </a></li>
                 <div class="Icon">
                     <img id="bildicon1" src="Bilder/nedladdning.png" alt="ingen bild">
