--- a/Sights.html
+++ b/Sights.html
@@ -18,7 +18,7 @@
                     </div>
                     <li><a href="index.html" id=border>Home</a></li>
                     <li><a href="Culture.html"> Culture </a></li>
-                    <li><a href="#">Traditions</a></li>
+                    <li><a href="Traditions.html">Traditions</a></li>
                     <li><a href="Sights.html"> Sights </a></li>
                     <div class="Icon">
                         <img id="bildicon1" src="Bilder/nedladdning.png" alt="ingen bild">
@@ -35,6 +35,7 @@
             <div class="text">
             <p class="paragrafSight">
                 <strong><u>History of the Assyrian Empire:</u></strong><br>
+                
                 
                 Besides being well known for their superior army during its time, Iron weapons and building roads. Assyrians are said to be the first civilization. As the great king Nimrod came to power he started the world famous structure Northwest Palace of the Assyrian Empire. This structure does not look as tempting as the re-created one in the picture, however the amazing sight can be seen in modern Iraq. The building includes great statues of Ashur, who was believed to be the god of war. Which can be seen on the right picture.
                 <br>
